# permanent

./: .gitignore  CMakeLists.txt
RPackage/: DESCRIPTION  NAMESPACE
RPackage/R/: classes.R  exact.R  importanceSampling.R  onLoad.R  withoutReplacement.R  withoutReplacement2.R  withoutReplacement3.R  withoutReplacement4.R
RPackage/src/: CMakeLists.txt
RPackage/src/permanent/: CMakeLists.txt  exact.cpp  exact.h  importanceSampling.cpp  importanceSampling.h  register.cpp  withoutReplacement.cpp  withoutReplacement.h  withoutReplacement2.cpp  withoutReplacement2.h  withoutReplacement3.cpp  withoutReplacement3.h  withoutReplacement4.cpp  withoutReplacement4.h
Simulations/: computeExact.R  generateScenarios.R  getMatrices.R  jobScript.R  submitJobsTorque.R  submitScriptTorque.sh  summarise.R
common/: CMakeLists.txt  importanceSamplingImpl.cpp  importanceSamplingImpl.h  includeMPFR.h  withoutReplacement2Impl.cpp  withoutReplacement2Impl.h  withoutReplacement3Impl.cpp  withoutReplacement3Impl.h  withoutReplacement4Impl.cpp  withoutReplacement4Impl.h  withoutReplacementImpl.cpp  withoutReplacementImpl.h
copyText/: CMakeLists.txt
