cmake_minimum_required(VERSION 3.1)
set(Headers withoutReplacementImpl.h importanceSamplingImpl.h withoutReplacement2Impl.h)
set(CppFiles withoutReplacementImpl.cpp importanceSamplingImpl.cpp withoutReplacement2Impl.cpp)
add_library(permanentCommon STATIC ${CppFiles} ${Headers})
target_link_libraries(permanentCommon PUBLIC ${Boost_LIBRARIES} mpfr sampling)
target_include_directories(permanentCommon PUBLIC ${Boost_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(permanentCommon PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)

if(WIN32)
	target_compile_definitions(permanentCommon PUBLIC _SCL_SECURE_NO_WARNINGS)
	target_link_libraries(permanentCommon PUBLIC mpir)
else()
	if(NOT(CMAKE_CXX_COMPILER_ID MATCHES "Intel"))
		target_compile_features(permanentCommon PUBLIC cxx_rvalue_references)
		target_compile_options(permanentCommon PUBLIC "-fPIC")
	else()
		target_compile_options(permanentCommon PUBLIC "-std=c++11" "-fPIC")
	endif()

endif()
