cmake_minimum_required(VERSION 3.1)
set(CppFiles register.cpp importanceSampling.cpp withoutReplacement.cpp withoutReplacement2.cpp withoutReplacement3.cpp)
set(HeaderFiles importanceSampling.h withoutReplacement.h withoutReplacement2.h withoutReplacement3.h)
add_library(permanentRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(permanentRPackage PUBLIC permanentCommon Rcpp)
set_target_properties(permanentRPackage PROPERTIES OUTPUT_NAME "permanent")
target_compile_definitions(permanentRPackage PRIVATE CUSTOM_STATIC_RCPP)

if(WIN32)
	target_compile_definitions(permanentRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(permanentRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
			set_target_properties(permanentRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
		else()
			set_target_properties(permanentRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386)
		endif()
	endforeach()
else()
	set_target_properties(permanentRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(permanentRPackage PROPERTIES PREFIX "")
endif()
